--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "@types/react": "^16.9.2",
     "@types/react-dom": "^16.8.5",
     "@types/styled-components": "^4.1.18",
-    "babel-plugin-styled-components": "^1.10.6"
+    "babel-plugin-styled-components": "^1.10.6",
+    "typescript": "^4.1.3"
   }
 }
