add simple canvas

--- a/package.json
+++ b/package.json
@@ -20,9 +20,11 @@
   },
   "homepage": "https://github.com/kxmatejka/next-template#readme",
   "dependencies": {
+    "konva": "^7.2.2",
     "next": "^9.0.3",
     "react": "^16.9.0",
     "react-dom": "^16.9.0",
+    "react-konva": "^16.9.0-1",
     "styled-components": "^4.3.2"
   },
   "devDependencies": {
